--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,26 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  overflow-x: hidden;
+  /* margin-top: 50px; */
+  height: 100%;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.icon{
+  top: calc(25%);
 }
 
 .logo {
